weird width issue on mobile

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -114,43 +114,6 @@
   }
 }
 
-@keyframes fadeInLeft {
-  from {
-    opacity: 0;
-    transform: translateX(-60px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes fadeInRight {
-  from {
-    opacity: 0;
-    transform: translateX(60px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-.fade-in-left {
-  opacity: 0;
-  animation-name: fadeInLeft;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.fade-in-right {
-  opacity: 0;
-  animation-name: fadeInRight;
-  animation-duration: 1s;
-  animation-delay: 0.5s;
-  animation-fill-mode: forwards;
-}
-
 .about__btn a {
   text-decoration: none;
   color: inherit; /* optional: use this if you want the link color to match the button text color */
