--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -28,6 +28,6 @@
 
   &__link,
   &__github {
-    color: rgba(#fff, 0.8);
+    color: rgba(#fff, 1);
   }
 }
