--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,163 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700&display=swap");
+@-webkit-keyframes rainbow {
+  0% {
+    border-color: #ff7f50;
+  }
+  14% {
+    border-color: #1d2951;
+  }
+  28% {
+    border-color: #98ddca;
+  }
+  42% {
+    border-color: #fff9b0;
+  }
+  57% {
+    border-color: #4aa0d5;
+  }
+  71% {
+    border-color: #d7b8ab;
+  }
+  85% {
+    border-color: #b57edc;
+  }
+  100% {
+    border-color: #ff7f50;
+  }
+}
+@keyframes rainbow {
+  0% {
+    border-color: #ff7f50;
+  }
+  14% {
+    border-color: #1d2951;
+  }
+  28% {
+    border-color: #98ddca;
+  }
+  42% {
+    border-color: #fff9b0;
+  }
+  57% {
+    border-color: #4aa0d5;
+  }
+  71% {
+    border-color: #d7b8ab;
+  }
+  85% {
+    border-color: #b57edc;
+  }
+  100% {
+    border-color: #ff7f50;
+  }
+}
+@-webkit-keyframes wave-animation {
+  0%, 100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(-10deg);
+  }
+  75% {
+    transform: rotate(10deg);
+  }
+}
+@keyframes wave-animation {
+  0%, 100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(-10deg);
+  }
+  75% {
+    transform: rotate(10deg);
+  }
+}
+@-webkit-keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-60px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-60px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@-webkit-keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translateX(60px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translateX(60px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+.fade-in-left {
+  opacity: 0;
+  -webkit-animation-name: fadeInLeft;
+          animation-name: fadeInLeft;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.fade-in-right {
+  opacity: 0;
+  -webkit-animation-name: fadeInRight;
+          animation-name: fadeInRight;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes morph {
+  0% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+  50% {
+    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
+  100% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+}
+
+@keyframes morph {
+  0% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+  50% {
+    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
+  100% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+}
 *::before,
 *::after,
 * {
@@ -397,103 +556,6 @@ body {
   }
 }
 
-@-webkit-keyframes morph {
-  0% {
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-  }
-  50% {
-    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
-  }
-  100% {
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-  }
-}
-
-@keyframes morph {
-  0% {
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-  }
-  50% {
-    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
-  }
-  100% {
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-  }
-}
-@-webkit-keyframes rainbow {
-  0% {
-    border-color: #ff7f50;
-  }
-  14% {
-    border-color: #1d2951;
-  }
-  28% {
-    border-color: #98ddca;
-  }
-  42% {
-    border-color: #fff9b0;
-  }
-  57% {
-    border-color: #4aa0d5;
-  }
-  71% {
-    border-color: #d7b8ab;
-  }
-  85% {
-    border-color: #b57edc;
-  }
-  100% {
-    border-color: #ff7f50;
-  }
-}
-@keyframes rainbow {
-  0% {
-    border-color: #ff7f50;
-  }
-  14% {
-    border-color: #1d2951;
-  }
-  28% {
-    border-color: #98ddca;
-  }
-  42% {
-    border-color: #fff9b0;
-  }
-  57% {
-    border-color: #4aa0d5;
-  }
-  71% {
-    border-color: #d7b8ab;
-  }
-  85% {
-    border-color: #b57edc;
-  }
-  100% {
-    border-color: #ff7f50;
-  }
-}
-@-webkit-keyframes wave-animation {
-  0%, 100% {
-    transform: rotate(0deg);
-  }
-  25% {
-    transform: rotate(-10deg);
-  }
-  75% {
-    transform: rotate(10deg);
-  }
-}
-@keyframes wave-animation {
-  0%, 100% {
-    transform: rotate(0deg);
-  }
-  25% {
-    transform: rotate(-10deg);
-  }
-  75% {
-    transform: rotate(10deg);
-  }
-}
 .about {
   background-color: #f0f0f0;
   display: flex;
@@ -620,69 +682,6 @@ body {
   }
 }
 
-@-webkit-keyframes fadeInLeft {
-  from {
-    opacity: 0;
-    transform: translateX(-60px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes fadeInLeft {
-  from {
-    opacity: 0;
-    transform: translateX(-60px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@-webkit-keyframes fadeInRight {
-  from {
-    opacity: 0;
-    transform: translateX(60px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes fadeInRight {
-  from {
-    opacity: 0;
-    transform: translateX(60px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-.fade-in-left {
-  opacity: 0;
-  -webkit-animation-name: fadeInLeft;
-          animation-name: fadeInLeft;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-
-.fade-in-right {
-  opacity: 0;
-  -webkit-animation-name: fadeInRight;
-          animation-name: fadeInRight;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-
 .about__btn a {
   text-decoration: none;
   color: inherit; /* optional: use this if you want the link color to match the button text color */
@@ -729,7 +728,7 @@ body {
 .projects__container {
   position: relative;
   display: flex;
-  min-width: 100%;
+  width: 100%;
   min-height: 25rem;
   margin-top: 5rem;
   border-radius: 0.8rem;
@@ -803,6 +802,7 @@ body {
 .projects__container--links {
   display: flex;
   justify-content: space-around;
+  margin-top: 1rem;
   align-items: center;
 }
 .projects__container--github, .projects__container--live {
@@ -835,7 +835,7 @@ body {
 .projects__container--reversed {
   position: relative;
   display: flex;
-  min-width: 100%;
+  width: 100%;
   min-height: 25rem;
   margin-top: 5rem;
   border-radius: 0.8rem;
@@ -858,10 +858,10 @@ body {
   }
 }
 .projects--githubIcon {
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 .projects--ExternalIcon {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .contact {
@@ -1126,5 +1126,5 @@ body {
   }
 }
 .footer__link, .footer__github {
-  color: rgba(255, 255, 255, 0.8);
+  color: white;
 }/*# sourceMappingURL=main.css.map */
